[#113] fix: overlap

--- a/styles/ContentBody.module.css
+++ b/styles/ContentBody.module.css
@@ -6,3 +6,6 @@
 .title_wrapper {
   margin-bottom: 15px;
 }
+.overlay {
+  word-break: break-word;
+}
